--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- IMPORTANTE PONER LOS PUNTOS DETRAS DE LOS DIRECTORIOS, PORQUE SI NO GITHUB PAGES NO TOMA LOS CONTENIDOS,
+    TAMBIEN ES IMPORTANTE SABER QUE GITHUB PAGES ES CASE SENSITIVE, USAR MINUSCULAS (EJ:./assets/img/una_imagen.jpg) -->
 <!DOCTYPE html>
 <html lang="es">
 
@@ -18,7 +20,7 @@
                 <a class="navbar-brand" href="#"><img src="./assets/platzi-logo.png" alt="Logo de platzi">Conf Hawaii
                     2020</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
